--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "kah-ozetin",
+  "name": "kah-özetin",
   "version": "0.1.0",
   "private": true,
   "scripts": {
@@ -8,7 +8,11 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^17.2.3",
+    "framer-motion": "^12.26.2",
+    "html2canvas": "^1.4.1",
     "next": "16.1.2",
+    "node-fetch": "^3.3.2",
     "react": "19.2.3",
     "react-dom": "19.2.3"
   },
