--- a/package.json
+++ b/package.json
@@ -10,7 +10,7 @@
   "dependencies": {
     "dotenv": "^17.2.3",
     "framer-motion": "^12.26.2",
-    "html2canvas": "^1.4.1",
+    "html2canvas-pro": "^1.6.6",
     "next": "16.1.2",
     "node-fetch": "^3.3.2",
     "react": "19.2.3",
